# cairn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  sqlx-data.json
.changes/: 0.1.0.md
.changes/unreleased/: Added-20220403-171601.yaml
.github/workflows/: build-all.yml  check.yml
dev-scripts/: release.py  update-offline-data.sh
migrations/: 20220403030759_Tasks_table.up.sql
sql/: fetch-summary-tasks.sql  fetch-task-by-id.sql  insert-new-task.sql  truncate-tasks.sql
src/: cli.rs  conn.rs  err.rs  main.rs  status.rs  task.rs
